<resources>
    <string name="app_name">Bentley Bookswap</string>
    <string name="title_activity_add_item_activity">add_item_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="likeTo">I would like to..</string>
    <string name="buttonBuy">Buy Books</string>
    <string name="buttonSell">Sell Books</string>
    <string name="buttonSubmit">Submit for Review</string>
    <string name="createListing">Create Bookswap Listing:</string>
    <string name="terms">This listing is accurate and is not spam.  Any abuses of listings will be reported.</string>
    <string name="hintFname">First Name: (Required)</string>
    <string name="hintTitle">Book Title: (Required)</string>
    <string name="hintAuthor">Author: (Required)</string>
    <string name="hintPrice">$0.00 (Required)</string>
    <string name="hintPhone">(888) 888-8888</string>
    <string name="hintEmail">falcons@bentley.edu (Required)</string>
    <string name="sortBy">Sort By:</string>
    <string name="classCode">Class Code (XX)</string>
    <string name="title">Title of Book</string>
    <string name="itemTitle">Title: </string>
    <string name="itemAuthor">Author: </string>
    <string name="isbn">ISBN: </string>
    <string name="itemCategory">Class Code: </string>
    <string name="itemFirstName">First Name: </string>
    <string name="price">Price: </string>
    <string name="phone">Phone: </string>
    <string name="email">Email: </string>
    <string name="meetingLocation">Meeting Place: </string>
    <string name="buttonSearch">Go</string>
    <string name="menuISBN">ISBN Search</string>
    <string name="menuTitle">Title Search</string>
    <string name="menuShare">Share</string>
    <string name="buttonText">Text</string>
    <string name="buttonCall">Call</string>
    <string name="buttonEmail">Email</string>
    <string name="buttonMap">Map</string>
    <string-array name="locationSpinner">
        <item>Upper Campus</item>
        <item>Lower Campus</item>
        <item>Student Center</item>
        <item>Library</item>
        <item>Off-Campus</item>
        <item>Other</item>
    </string-array>
    <string-array name="classCategories">
        <item>ALL BOOKS</item>
        <item>AC</item>
        <item>AF</item>
        <item>CDI</item>
        <item>MLCH</item>
        <item>CIN</item>
        <item>COM</item>
        <item>CS</item>
        <item>EC</item>
        <item>EMS</item>
        <item>EXP</item>
        <item>FI</item>
        <item>FS</item>
        <item>MLFR</item>
        <item>GB</item>
        <item>GLS</item>
        <item>HI</item>
        <item>IDCC</item>
        <item>IT</item>
        <item>IPM</item>
        <item>ID</item>
        <item>MLIT</item>
        <item>MLJA</item>
        <item>LA</item>
        <item>LIT</item>
        <item>MG</item>
        <item>MK</item>
        <item>MA</item>
        <item>MC</item>
        <item>NASC</item>
        <item>NASE</item>
        <item>PH</item>
        <item>PRS</item>
        <item>PS</item>
        <item>SO</item>
        <item>MLSP</item>
        <item>Other</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
