<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1282c4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/sortBy"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonClassSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/classCode"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTitleSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:gravity="center_horizontal"
        android:text="ANIMATION HERE" />
</LinearLayout>
