<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaleItemPageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="113dp"
        android:layout_height="128dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/rowTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/itemTitle" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="165sp"
                    android:layout_height="45sp"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowAuthor"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/itemAuthor" />

                <TextView
                    android:id="@+id/textViewAuthor"
                    android:layout_width="165sp"
                    android:layout_height="45sp"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowISBN"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/isbn" />

                <TextView
                    android:id="@+id/textViewISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/rowFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/itemFirstName" />

                <TextView
                    android:id="@+id/textViewFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/itemCategory" />

                <TextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lablePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lablePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:id="@+id/rowLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/meetingLocation" />

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="TextView" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>