<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListItemDetail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="15sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:text="TextView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_marginStart="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAuthor"
        android:layout_marginStart="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:text="TextView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPrice"
        android:layout_margin="15sp"
        android:text="TextView" />

    <TextView
        android:id="@+id/LabelIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginEnd="2sp"
        android:layout_toLeftOf="@id/textViewISBN"
        android:text="@string/isbn" />

    <TextView
        android:id="@+id/textViewISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:text="9789999999999" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewISBN"
        android:layout_marginTop="20sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35sp"
                android:text="@string/itemFirstName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35sp"
                android:text="@string/phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35sp"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Location:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35sp"
                android:layout_marginTop="35sp"
                android:text="@string/meetingLocation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>